# microservices-base

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  tmpclaude-01a9-cwd
libs/rust/: CHANGELOG.md  Cargo.toml  README.md
libs/rust/caep/: Cargo.toml
libs/rust/caep/benches/: latency_bench.rs
libs/rust/caep/src/: error.rs  event.rs  handler.rs  lib.rs  receiver.rs  set.rs  stream.rs  transmitter.rs
libs/rust/caep/tests/: property_tests.rs
libs/rust/integration/: Cargo.toml
libs/rust/integration/tests/: e2e_tests.rs
libs/rust/linkerd/: Cargo.toml
libs/rust/linkerd/src/: lib.rs  metrics.rs  mtls.rs  trace.rs
libs/rust/linkerd/tests/: property_tests.rs
libs/rust/pact/: Cargo.toml
libs/rust/pact/src/: contract.rs  lib.rs  matrix.rs  verification.rs
libs/rust/pact/tests/: property_tests.rs
libs/rust/rust-common/: Cargo.toml  README.md
libs/rust/rust-common/src/: cache_client.rs  circuit_breaker.rs  error.rs  http.rs  lib.rs  logging_client.rs  metrics.rs  retry.rs  tracing_config.rs
libs/rust/rust-common/tests/: property_tests.rs
libs/rust/test-utils/: Cargo.toml
libs/rust/test-utils/src/: fixtures.rs  generators.rs  lib.rs  mocks.rs
libs/rust/vault/: Cargo.toml
libs/rust/vault/src/: client.rs  config.rs  error.rs  lib.rs  provider.rs  secrets.rs
libs/rust/vault/tests/: property_tests.proptest-regressions  property_tests.rs
sdk/python/: README.md  pyproject.toml
sdk/python/src/auth_platform_sdk/: __init__.py  async_client.py  client.py  config.py  dpop.py  errors.py  http.py  jwks.py  middleware.py  models.py  pkce.py  telemetry.py  types.py
sdk/python/tests/: __init__.py  conftest.py  test_jwks_cache.py
sdk/python/tests/integration/: __init__.py
sdk/python/tests/property/: __init__.py  test_auth_builder_properties.py  test_circuit_breaker_properties.py  test_client_properties.py  test_config_properties.py  test_dpop_properties.py  test_error_factory_properties.py  test_errors_properties.py  test_http_executor_properties.py  test_http_properties.py  test_jwks_cache_properties.py  test_jwks_properties.py  test_pkce_properties.py  test_token_validator_core.py  test_token_validator_properties.py  token_validator_helpers.py
sdk/python/tests/unit/: __init__.py  test_dpop.py  test_errors.py  test_models.py  test_pkce.py
services/auth-edge/: COMPILATION_FIXES_REPORT.md  Cargo.toml  README.md  build.rs
services/auth-edge/proto/: auth_edge.proto  crypto_service.proto
services/auth-edge/src/: config.rs  error.rs  lib.rs  main.rs  shutdown.rs
services/auth-edge/src/circuit_breaker/: mod.rs  state.rs
services/auth-edge/src/crypto/: cache_integration.rs  client.rs  config.rs  error.rs  fallback.rs  key_manager.rs  logging.rs  metrics.rs  mod.rs  tests.rs
services/auth-edge/src/grpc/: mod.rs
services/auth-edge/src/jwt/: claims.rs  jwk_cache.rs  mod.rs  token.rs  validator.rs
services/auth-edge/src/middleware/: mod.rs  rate_limiter.rs  stack.rs  timeout.rs  tracing.rs
services/auth-edge/src/mtls/: mod.rs  spiffe.rs  verifier.rs
services/auth-edge/src/observability/: logging.rs  metrics.rs  mod.rs  telemetry.rs
services/auth-edge/src/rate_limiter/: mod.rs
services/auth-edge/tests/contract/: iam_service.rs  mod.rs  session_service.rs  token_service.rs
services/auth-edge/tests/integration/: crypto_integration_test.rs  mod.rs  validation_flow.rs
services/auth-edge/tests/property/: cache_fallback.rs  circuit_breaker.rs  config.rs  error_retryability.rs  error_sanitization.rs  generators.rs  jwt_typestate.rs  logging.rs  mod.rs  rate_limiter.rs  security.rs  shutdown.rs  spiffe.rs
services/auth-edge/tests/unit/: certificate.rs  circuit_breaker.rs  claims.rs  config.rs  error.rs  grpc.rs  jwk_cache.rs  metrics.rs  middleware.rs  mod.rs  rate_limiter.rs  shutdown.rs  spiffe.rs  token.rs
services/crypto-service/: CMakeLists.txt  Dockerfile  README.md
services/crypto-service/proto/: crypto_service.proto
services/crypto-service/tests/integration/: README.md  cache_service_integration_test.cpp  logging_service_integration_test.cpp
services/crypto-service/tests/property/: aes_properties_test.cpp  audit_properties_test.cpp  cache_properties_test.cpp  config_properties_test.cpp  file_encryption_properties_test.cpp  input_validation_properties_test.cpp  key_properties_test.cpp  logging_properties_test.cpp  observability_properties_test.cpp  rsa_properties_test.cpp  signature_properties_test.cpp
services/sms-service/: .env.example  SECURITY_JWT_FIX.md  pyproject.toml  requirements-vault.txt
services/sms-service/examples/: vault_usage_example.py
services/sms-service/src/: __init__.py
services/sms-service/src/api/: __init__.py
services/sms-service/src/config/: __init__.py  settings.py  vault_settings.py
services/sms-service/src/infrastructure/: __init__.py
services/sms-service/src/observability/: __init__.py  vault_metrics.py
services/sms-service/src/providers/: __init__.py
services/sms-service/src/shared/: vault_client.py
services/sms-service/src/worker/: __init__.py
services/sms-service/tests/: conftest.py
services/sms-service/tests/integration/: test_vault_integration.py
services/sms-service/tests/manual/: test_vault_improvements.py
services/sms-service/tests/property/: test_jwt_secret_security_properties.py
services/token/: Cargo.toml  README.md  build.rs
services/token/proto/: crypto_service.proto
services/token/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
services/token/src/crypto/: client.rs  config.rs  encryptor.rs  error.rs  factory.rs  fallback.rs  metrics.rs  mod.rs  models.rs  signer.rs
services/token/src/dpop/: mod.rs  (+3 more)
services/token/tests/: cache_property_tests.rs  crypto_advanced_property_tests.rs  crypto_integration_tests.rs  crypto_property_tests.rs  dpop_property_tests.rs  error_property_tests.rs  jwks_property_tests.rs  jwt_property_tests.rs  observability_property_tests.proptest-regressions  observability_property_tests.rs  pact_provider_tests.rs  property_tests.rs  refresh_property_tests.proptest-regressions  refresh_property_tests.rs
(+2135 files in other folders)
