[workspace]
resolver = "2"
members = [
    "rust-common",
    "caep",
    "vault",
    "linkerd",
    "pact",
    "integration",
    "test-utils",
    "../../services/token",
]

[workspace.package]
edition = "2024"
license = "Proprietary"
repository = "https://github.com/auth-platform/auth-platform"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# JWT
jsonwebtoken = "9.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Security
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
aes-gcm = "0.10"
rand = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Testing
proptest = "1.5"
tokio-test = "0.4"
wiremock = "0.6"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
base64 = "0.22"
url = "2.5"
regex = "1.11"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
