[tool.poetry]
name = "auth-platform-sdk"
version = "0.1.0"
description = "Auth Platform Python SDK"
authors = ["Auth Platform Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "auth_platform_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.25.0"
pyjwt = {version = "^2.8.0", extras = ["crypto"]}
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
hypothesis = "^6.92.0"
mypy = "^1.7.0"
ruff = "^0.1.0"
respx = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
