[package]
name = "auth-edge-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Auth Platform Team"]
description = "Ultra-low latency JWT validation and edge routing service"
repository = "https://github.com/auth-platform/auth-edge-service"
documentation = "https://docs.auth-platform.io/edge-service"
keywords = ["jwt", "authentication", "grpc", "edge", "zero-trust"]
categories = ["authentication", "web-programming"]

[dependencies]
# Shared library
rust-common = { path = "../../libs/rust/rust-common" }

# Async runtime
tokio = { version = "1.42", features = ["full", "signal"] }

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"

# Tower middleware stack
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "timeout"] }

# JWT and crypto
jsonwebtoken = "9.3"
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
subtle = "2.6"

# X.509 and SPIFFE
x509-parser = "0.16"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.1"
pem = "3.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for JWKS fetch
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots"] }

# Configuration
config = "0.14"
dotenvy = "0.15"
url = "2.5"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry observability
opentelemetry = { version = "0.27", features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["tonic"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

# Metrics
prometheus = "0.13"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
parking_lot = "0.12"
arc-swap = "1.7"
futures = "0.3"

# UUID for correlation IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Security
aes-gcm = "0.10"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
proptest = "1.5"
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"

[features]
default = []
otel = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bin]]
name = "auth-edge-service"
path = "src/main.rs"

[lib]
name = "auth_edge"
path = "src/lib.rs"
