[package]
name = "token-service"
version = "0.1.0"
edition = "2021"
authors = ["Auth Platform Team"]
description = "JWT signing and token management service"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"

# JWT and crypto
jsonwebtoken = "9.2"
ring = "0.17"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "cluster-async"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Property-based testing
proptest = "1.4"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
mockall = "0.12"
# Pact provider verification - Requirements 5.2
pact_verifier = "1.1"
pact_models = "1.1"

[[bin]]
name = "token-service"
path = "src/main.rs"
