[package]
name = "auth-caep"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CAEP (Continuous Access Evaluation Protocol) implementation for Auth Platform"

[dependencies]
# Internal dependencies
rust-common = { path = "../rust-common" }

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# JWT
jsonwebtoken.workspace = true

# Time
chrono.workspace = true

# Async runtime
tokio.workspace = true

# HTTP client
reqwest.workspace = true

# Observability
tracing.workspace = true

# Utilities
uuid.workspace = true
base64.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
test-utils = { path = "../test-utils" }

[lints]
workspace = true
