[package]
name = "auth-linkerd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Linkerd service mesh types and utilities for Auth Platform"

[dependencies]
# Workspace dependencies
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Local dependencies
rust-common = { path = "../rust-common" }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
