[package]
name = "auth-pact"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pact contract testing types for Auth Platform"

[dependencies]
# Workspace dependencies
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# Local dependencies
rust-common = { path = "../rust-common" }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
