[package]
name = "rust-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared library for cross-cutting concerns in auth-platform Rust services"

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Security
aes-gcm.workspace = true
rand.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
