[package]
name = "test-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared test utilities, generators, and fixtures for auth-platform Rust libraries"

[dependencies]
# Testing
proptest.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Security
secrecy.workspace = true

# Utilities
uuid.workspace = true

# Internal dependencies
rust-common = { path = "../rust-common" }

[lints]
workspace = true
