[package]
name = "auth-vault-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HashiCorp Vault client for Auth Platform"

[dependencies]
# Workspace dependencies
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
aes-gcm.workspace = true
rand.workspace = true

# Local dependencies
rust-common = { path = "../rust-common" }

# Vault-specific
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
wiremock = "0.6"

[lints]
workspace = true
